--- a/doc/src/schema.adoc
+++ b/doc/src/schema.adoc
@@ -152,3 +152,13 @@ The following substitutions are supported:
 * `%n` is replaced with the worker ID (integer)
 * `%g` is replaced with the group ID
 * `%h` is replaced with the hostname
+
+[id=autorate._.update_interval]
+== How often autorate is updated
+
+This parameter governs how often error is calculated and control parameter is updated.
+
+[id=autorate._.speed]
+== Maximum rate of change of the controlled parameter
+
+Note: this parameter can be set to 0 to effectively disable autorate and lock control parameter in place.
