--- a/README.adoc
+++ b/README.adoc
@@ -154,6 +154,44 @@ export EMQTTB_METRICS__GRAFANA__URL="http://localhost:3000"
 emqttb --grafana ...
 ----
 
+== Build and run locally
+
+Requirements:
+
+* https://www.erlang.org/[Erlang/OTP 24+]
+* https://rebar3.org/[rebar3]
+* make
+* cmake (for quicer)
+
+If you want to build HTML documentation and manpages, it's necessary to install the following tools:
+
+* asciidoctor (lee dependency)
+* xsltproc
+* docbook-xsl
+* java (jre is enough)
+
+This can be omitted by running `export CAN_BUILD_DOCS=false`.
+
+[source,bash]
+----
+git clone git@github.com:emqx/emqttb.git
+cd emqttb
+make release
+----
+
+=== Building on macOS
+
+Assuming you already have https://brew.sh/[Homebrew] installed.
+
+[source,bash]
+----
+brew install erlang rebar3 cmake java asciidoctor xsltproc docbook-xsl
+git clone git@github.com:emqx/emqttb.git
+cd emqttb
+export MANPAGE_STYLESHEET=$(brew --prefix docbook-xsl)/docbook-xsl/manpages/docbook.xsl
+make release
+----
+
 == Getting more help
 
 It is possible to get information about CLI actions by running `emqttb --help <command>`.
