--- a/README.adoc
+++ b/README.adoc
@@ -163,12 +163,12 @@ Requirements:
 * make
 * cmake (for quicer)
 
-If you want to build HTML documentation and manpages, it's necessary to install the following tools:
+If you want to build HTML and info documentation, it's necessary to install the following tools:
 
-* asciidoctor (lee dependency)
-* xsltproc
-* docbook-xsl
-* java (jre is enough)
+- texinfo
+- install-info
+- texi2any
+- texi2html
 
 This can be omitted by running `export CAN_BUILD_DOCS=false`.
 
@@ -185,7 +185,7 @@ Assuming you already have https://brew.sh/[Homebrew] installed.
 
 [source,bash]
 ----
-brew install erlang rebar3 cmake java asciidoctor xsltproc docbook-xsl
+brew install erlang rebar3 cmake texi2html texinfo
 git clone git@github.com:emqx/emqttb.git
 cd emqttb
 export MANPAGE_STYLESHEET=$(brew --prefix docbook-xsl)/docbook-xsl/manpages/docbook.xsl
